--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="#header">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
@@ -44,7 +44,26 @@
         </div>
     </nav>
 
-
+    <!-- Header -->
+    <header id="header">
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="header-content-left">
+                        <img src="./img/image1.png" style="width: 100%;">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="header-content-right">
+                        <h1 class="display-4">Lorem ipsum dolor</h1>
+                        <p class="mt-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, saepe. Enim ratione magni harum molestias, sequi ex pariatur quidem error autem voluptatum adipisci dolorum animi debitis sunt perspiciatis nemo similique!</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, saepe. Enim ratione magni harum molestias, sequi ex pariatur quidem error autem voluptatum adipisci dolorum animi debitis sunt perspiciatis nemo similique!</p>
+                        <a href="#" class="btn btn-outline-secondary btn-lg mt-2">Read more</a>
+                    </div> 
+                </div>
+            </div>
+        </div>
+    </header>
 
     <!-- Bootstrap 4 scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
