--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
         </div>
     </header>
 
+
+    <!-- Testimonial -->
+    <section id="testimonial">
+        <div class="container">
+            <p class="mb-2 h2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet earum itaque id ab unde minus quia, debitis deserunt quae exercitationem neque repellendus sit totam placeat iste, aut possimus! Cumque, quasi?</p>
+            <p class="h4">- Ryan Maquinolo</p>
+        </div>
+    </section>
+
     <!-- Bootstrap 4 scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
