implementar seccion de informacion

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">Bootstrap Web Site</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="#header">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#info-one">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
@@ -71,6 +71,44 @@
         <div class="container">
             <p class="mb-2 h2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet earum itaque id ab unde minus quia, debitis deserunt quae exercitationem neque repellendus sit totam placeat iste, aut possimus! Cumque, quasi?</p>
             <p class="h4">- Ryan Maquinolo</p>
+        </div>
+    </section>
+
+
+    <!-- Info One -->
+    <section id="info-one">
+        <div class="container">
+            <div class="row mt-5">
+                <div class="col-md-6">
+                    <div class="info-left">
+                        <img src="./img/image2.png" alt="Smartphone" style="width: 100%;">
+                    </div>
+                </div>
+                <div class="col-md-6 my-auto">
+                    <div class="info-right">
+                        <h2>Lorem ipsum dolor sit.</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla reiciendis asperiores magnam beatae praesentium quidem porro voluptatibus eius repudiandae corrupti! Voluptates minus consectetur officiis deleniti aliquid corporis laboriosam? Rerum, incidunt?</p>
+                        <a href="#" class="btn btn-outline-secondary  btn-lg">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Info Two -->
+    <section id="info-two" style="background-color: #f1f1f1;">
+        <div class="container">
+            <div class="row my-5">
+                <div class="col-md-6">
+                    <h2> Lorem, ipsum dolor.</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione officiis, voluptatem unde maxime deleniti deserunt facere debitis dolor beatae similique architecto et quidem! Temporibus accusantium sed, tempora debitis eos qui.</p>
+                </div>
+                <div class="col-md-6">
+                    <h2> Lorem, ipsum dolor.</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione officiis, voluptatem unde maxime deleniti deserunt facere debitis dolor beatae similique architecto et quidem! Temporibus accusantium sed, tempora debitis eos qui.</p>
+                </div>
+            </div>
         </div>
     </section>
 
