Implementacion de la seccion footer

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="#info-one">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -111,6 +111,27 @@
             </div>
         </div>
     </section>
+
+    <footer id="contact">
+        <div class="container">
+            <div class="col-md-5 py-5">
+                <form class="card">
+                    <div class="card-body">
+                        <div class="form-group">
+                            <input type="text" placeholder="Name" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <input type="email" placeholder="Email" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <textarea cols="30" rows="10" placeholder="Message" class="form-control"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-outline-secondary btn-block">Send</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </footer>
 
     <!-- Bootstrap 4 scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
