--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <h1 class="display-4">Lorem ipsum dolor</h1>
                         <p class="mt-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, saepe. Enim ratione magni harum molestias, sequi ex pariatur quidem error autem voluptatum adipisci dolorum animi debitis sunt perspiciatis nemo similique!</p>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, saepe. Enim ratione magni harum molestias, sequi ex pariatur quidem error autem voluptatum adipisci dolorum animi debitis sunt perspiciatis nemo similique!</p>
-                        <a href="#" class="btn btn-outline-secondary btn-lg mt-2">Read more</a>
+                        <a href="#" class="btn btn-outline-secondary btn-lg mt-2 header-btn">Read more</a>
                     </div> 
                 </div>
             </div>
@@ -137,5 +137,46 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+
+    <!-- scripts -->
+    <script>
+        window.sr= ScrollReveal();
+        sr.reveal('.navbar', {
+            duration: 2000,
+            origin: 'bottom'
+        });
+        sr.reveal('.header-content-left', {
+            duration: 2000,
+            origin: 'top',
+            distance: '300px'
+        });
+        sr.reveal('.header-content-right', {
+            duration: 2000,
+            origin: 'right',
+            distance: '300px'
+        });
+        sr.reveal('.header-btn', {
+            duration: 2000,
+            origin: 'bottom',
+            delay: 1000
+        });
+        sr.reveal('#testimonial', {
+            duration: 2000,
+            origin: 'left',
+            distance: '300px',
+            viewFactor: 0.2
+        });
+        
+
+        // smooth Scrolling
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e){
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+    </script>
 </body>
 </html>
